<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results">

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoText="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Analyzing Site"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mobileFriendly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="Mobile Friendly Test"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/mobileFriendlyLoadingPanel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/mobileFriendly"
        app:layout_constraintStart_toEndOf="@+id/mobileFriendly"
        app:layout_constraintTop_toTopOf="@+id/mobileFriendly"
        app:layout_constraintVertical_bias="0.478" />

    <ImageView
        android:id="@+id/mobileFriendlyPassIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mobileFriendlyLoadingPanel"
        app:layout_constraintStart_toEndOf="@+id/mobileFriendly"
        app:layout_constraintTop_toTopOf="@+id/mobileFriendlyLoadingPanel"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/pass" />

    <ImageView
        android:id="@+id/mobileFriendlyFailIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mobileFriendlyPassIcon"
        app:layout_constraintStart_toEndOf="@+id/mobileFriendly"
        app:layout_constraintTop_toTopOf="@+id/mobileFriendlyPassIcon"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/fail" />

    <TextView
        android:id="@+id/title"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_test"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileFriendly" />

    <ProgressBar
        android:id="@+id/titleLoadingPanel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintVertical_bias="0.478" />

    <ImageView
        android:id="@+id/titlePassIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/titleLoadingPanel"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/titleLoadingPanel"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/pass" />

    <ImageView
        android:id="@+id/titleFailIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/titlePassIcon"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/titlePassIcon"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/fail" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/desc_test"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ProgressBar
        android:id="@+id/descLoadingPanel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/desc"
        app:layout_constraintStart_toEndOf="@+id/desc"
        app:layout_constraintTop_toTopOf="@+id/desc"
        app:layout_constraintVertical_bias="0.478" />

    <ImageView
        android:id="@+id/descPassIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/descLoadingPanel"
        app:layout_constraintStart_toEndOf="@+id/desc"
        app:layout_constraintTop_toTopOf="@+id/descLoadingPanel"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/pass" />

    <ImageView
        android:id="@+id/descFailIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/descPassIcon"
        app:layout_constraintStart_toEndOf="@+id/desc"
        app:layout_constraintTop_toTopOf="@+id/descPassIcon"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/fail" />

    <TextView
        android:id="@+id/h1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/h1_test"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <ProgressBar
        android:id="@+id/h1LoadingPanel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/h1"
        app:layout_constraintStart_toEndOf="@+id/h1"
        app:layout_constraintTop_toTopOf="@+id/h1"
        app:layout_constraintVertical_bias="0.478" />

    <ImageView
        android:id="@+id/h1PassIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/h1LoadingPanel"
        app:layout_constraintStart_toEndOf="@+id/h1"
        app:layout_constraintTop_toTopOf="@+id/h1LoadingPanel"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/pass" />

    <ImageView
        android:id="@+id/h1FailIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/h1PassIcon"
        app:layout_constraintStart_toEndOf="@+id/h1"
        app:layout_constraintTop_toTopOf="@+id/h1PassIcon"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/fail" />

    <TextView
        android:id="@+id/alt"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/alt_test"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:typeface="normal"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h1" />

    <ProgressBar
        android:id="@+id/altLoadingPanel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/alt"
        app:layout_constraintStart_toEndOf="@+id/alt"
        app:layout_constraintTop_toTopOf="@+id/alt"
        app:layout_constraintVertical_bias="0.478" />

    <ImageView
        android:id="@+id/altPassIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/altLoadingPanel"
        app:layout_constraintStart_toEndOf="@+id/alt"
        app:layout_constraintTop_toTopOf="@+id/altLoadingPanel"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/pass" />

    <ImageView
        android:id="@+id/altFailIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/altPassIcon"
        app:layout_constraintStart_toEndOf="@+id/alt"
        app:layout_constraintTop_toTopOf="@+id/altPassIcon"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@mipmap/fail" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altPassIcon"
        app:layout_constraintVertical_bias="0.029" />

</android.support.constraint.ConstraintLayout>